RESOLVED FIXED175898
_WKThumbnailView snapshots have to be copied by CA on first commit due to bad row alignment
https://bugs.webkit.org/show_bug.cgi?id=175898
Summary _WKThumbnailView snapshots have to be copied by CA on first commit due to bad...
Tim Horton
Reported 2017-08-23 12:23:52 PDT
_WKThumbnailView snapshots have to be copied by CA on first commit due to bad row alignment
Attachments
Patch (10.04 KB, patch)
2017-08-23 12:30 PDT, Tim Horton
sam: review+
patch (9.70 KB, patch)
2017-08-23 17:16 PDT, Tim Horton
no flags
Patch (10.01 KB, patch)
2017-08-23 17:20 PDT, Tim Horton
no flags
Patch (9.69 KB, patch)
2017-08-23 17:27 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2017-08-23 12:30:02 PDT
Tim Horton
Comment 2 2017-08-23 12:30:20 PDT
I'm not sure that IOSurface alignment method is the best way, I'm asking around.
Sam Weinig
Comment 3 2017-08-23 16:12:04 PDT
Comment on attachment 318900 [details] Patch Looks good. Fix the other builds.
Tim Horton
Comment 4 2017-08-23 17:16:00 PDT
Tim Horton
Comment 5 2017-08-23 17:20:31 PDT
Tim Horton
Comment 6 2017-08-23 17:27:30 PDT
Tim Horton
Comment 7 2017-08-23 17:43:49 PDT
Simon Fraser (smfr)
Comment 8 2017-08-24 08:42:09 PDT
Comment on attachment 318948 [details] Patch I assume this means that ShareableBitmap can how have a few junk bytes at the end of each row? Are all clients prepared for this?
Tim Horton
Comment 9 2017-08-24 09:07:20 PDT
(In reply to Simon Fraser (smfr) from comment #8) > Comment on attachment 318948 [details] > Patch > > I assume this means that ShareableBitmap can how have a few junk bytes at > the end of each row? Are all clients prepared for this? Hopefully! I’m not sure there are any clients that don’t just use CGImage, which just handles this under the covers
Tim Horton
Comment 10 2017-08-24 10:42:02 PDT
(In reply to Tim Horton from comment #9) > (In reply to Simon Fraser (smfr) from comment #8) > > Comment on attachment 318948 [details] > > Patch > > > > I assume this means that ShareableBitmap can how have a few junk bytes at > > the end of each row? Are all clients prepared for this? > > Hopefully! I’m not sure there are any clients that don’t just use CGImage, > which just handles this under the covers There should be none, we don't even expose the raw data.
WebKit Commit Bot
Comment 11 2017-08-24 11:11:19 PDT
Comment on attachment 318948 [details] Patch Clearing flags on attachment: 318948 Committed r221149: <http://trac.webkit.org/changeset/221149>
WebKit Commit Bot
Comment 12 2017-08-24 11:11:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.