Source/WebKit/Shared/ShareableBitmap.cpp
@@ -84,7 +84,7 @@ bool ShareableBitmap::Configuration::decode(IPC::Decoder& decoder, Configuration
 
 RefPtr<ShareableBitmap> ShareableBitmap::create(const IntSize& size, Configuration configuration)
 {
-    auto numBytes = numBytesForSize(size, calculateBytesPerPixel(configuration));
+    auto numBytes = numBytesForSize(size, configuration);
     if (numBytes.hasOverflowed())
         return nullptr;
 
@@ -97,7 +97,7 @@ RefPtr<ShareableBitmap> ShareableBitmap::create(const IntSize& size, Configurati
 
 RefPtr<ShareableBitmap> ShareableBitmap::createShareable(const IntSize& size, Configuration configuration)
 {
-    auto numBytes = numBytesForSize(size, calculateBytesPerPixel(configuration));
+    auto numBytes = numBytesForSize(size, configuration);
     if (numBytes.hasOverflowed())
         return nullptr;
 
@@ -112,7 +112,7 @@ RefPtr<ShareableBitmap> ShareableBitmap::create(const IntSize& size, Configurati
 {
     ASSERT(sharedMemory);
 
-    auto numBytes = numBytesForSize(size, calculateBytesPerPixel(configuration));
+    auto numBytes = numBytesForSize(size, configuration);
     if (numBytes.hasOverflowed())
         return nullptr;
     if (sharedMemory->size() < numBytes.unsafeGet()) {
@@ -174,11 +174,9 @@ void* ShareableBitmap::data() const
     return m_data;
 }
 
-#if !USE(CG)
-unsigned ShareableBitmap::calculateBytesPerPixel(const Configuration&)
+Checked<unsigned, RecordOverflow> ShareableBitmap::numBytesForSize(WebCore::IntSize size, const ShareableBitmap::Configuration& configuration)
 {
-    return 4;
+    return calculateBytesPerRow(size, configuration) * size.height();
 }
-#endif
 
 } // namespace WebKit
